--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,8 +26,8 @@ requirements:
     - dill >=0.3.5.1
     - gpyreg >=0.1.0
     - imageio >=2.13.5
-    - matplotlib-base >=3.5.1
-    - numpy >=1.22.1
+    - matplotlib-base >=3.9.0
+    - numpy <2.0.0
     - plotly >=5.11.0
     - pytest >=6.2.5
     - pytest-mock >=3.6.1
